[package]
name = "ch22-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasm-bindgen = "0.2.99"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.76"

[dependencies.web-sys]
version = "0.3.76"
features = ['console']

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
rstest = "0.24.0"
rstest_reuse = "0.7.0"
