[package]
name = "ch22-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
wasm-bindgen = "0.2.99"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.76"

[dependencies.web-sys]
version = "0.3.76"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.135"
